--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1",
     "@mui/x-data-grid": "^5.5.0",
+    "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -17,14 +18,19 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.22",
+    "@types/redux-logger": "^3.0.9",
     "apexcharts": "^3.33.0",
+    "axios": "^0.26.0",
     "i": "^0.3.7",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "recharts": "^2.1.8",
+    "redux-logger": "^3.0.6",
     "router": "^1.3.6",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
