--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.6.0",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.3.1",
+    "@mui/lab": "^5.0.0-alpha.71",
     "@mui/material": "^5.3.1",
     "@mui/x-data-grid": "^5.5.0",
     "@reduxjs/toolkit": "^1.7.2",
