--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "5.0.0",
     "recharts": "^2.1.8",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "router": "^1.3.6",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
