--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.71",
     "@mui/material": "^5.3.1",
+    "@mui/system": "^5.5.0",
     "@mui/x-data-grid": "^5.5.0",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.1",
