--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react-redux": "^7.1.22",
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.26.0",
+    "html-to-image": "^1.9.0",
+    "html2canvas": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
